--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "daisyui": "^2.51.6",
     "flowbite": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.11.0"
+    "react-router-dom": "^6.11.0",
+    "sweetalert2": "^11.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
