--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.3.6",
     "daisyui": "^2.51.6",
     "flowbite": "^1.6.5",
+    "mapbox-gl": "^2.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-map-gl": "^7.0.23",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.0",
     "sweetalert2": "^11.7.5"
