--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "axios": "^1.3.6",
     "daisyui": "^2.51.6",
     "flowbite": "^1.6.5",
@@ -20,7 +21,8 @@
     "react-map-gl": "^7.0.23",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.0",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.5",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
